[gd_scene load_steps=4 format=3 uid="uid://co2r7dkxa2jvq"]

[ext_resource type="Script" uid="uid://r3obhuodalpb" path="res://scenes/match_pipeline/examples/HorizontalMatchSessionViewerController.gd" id="1_ctrl"]
[ext_resource type="PackedScene" uid="uid://dh7v3qnm5k2xl" path="res://scenes/match_pipeline/horizontal/HorizontalMatchViewer.tscn" id="2_viewer"]
[ext_resource type="PackedScene" path="res://scenes/ui/timeline/MatchTimelineControls.tscn" id="3_controls"]

[node name="HorizontalMatchSessionViewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ctrl")

[node name="HorizontalMatchViewer" parent="." instance=ExtResource("2_viewer")]
layout_mode = 1

[node name="MatchTimelineControls" parent="." instance=ExtResource("3_controls")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
offset_left = 16.0
offset_top = -140.0
offset_right = -16.0
offset_bottom = -16.0
